# lab_2-1-

./: CMakeLists.txt  README.md
src/: main.cpp  thirteen_array.cpp  thirteen_array.h
tests/: tests.cpp
